<resources>
    <string name="app_name">MyTestProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="not_authorized">вы не авторизованы</string>
    <string name="nav_header_desc">аватарка клиента</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="myPrefs">prefs</string>
    <string name="authorized">authorized</string>
    <!-- Strings related to login -->
    <string name="prompt_email">эл.почта</string>
    <string name="prompt_password">пароль</string>
    <string name="action_sign_in">войти</string>
    <string name="action_register">зарегистрироваться</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">неправильный eMail</string>
    <string name="error_invalid_password">слишком короткий пароль</string>
    <string name="error_incorrect_password">неправильный пароль</string>
    <string name="error_field_required">это поле обязательно</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--registration-->
    <string name="prompt_name">имя</string>




</resources>
